build_log.txt
[NASM] Assembling decoder stub...
[XXD] Generating decoder header...
[CC] Compiling src/adc_strategies.c...
[CC] Compiling src/advanced_hash_api_resolution.c...
[CC] Compiling src/advanced_string_operation_strategies.c...
[CC] Compiling src/advanced_transformations.c...
[CC] Compiling src/anti_debug_strategies.c...
[CC] Compiling src/api_hashing_strategies.c...
[CC] Compiling src/arithmetic_const_generation_strategies.c...
[CC] Compiling src/arithmetic_constant_construction_sub.c...
[CC] Compiling src/arithmetic_decomposition_strategies.c...
[CC] Compiling src/arithmetic_flag_preservation_strategies.c...
[CC] Compiling src/arithmetic_strategies.c...
[CC] Compiling src/arpl_strategies.c...
[CC] Compiling src/atomic_operation_encoding_strategies.c...
[CC] Compiling src/batch_processing.c...
[CC] Compiling src/bcd_arithmetic_obfuscation_strategies.c...
[CC] Compiling src/bit_counting_constant_strategies.c...
[CC] Compiling src/bit_manipulation_constant_strategies.c...
[CC] Compiling src/bit_scanning_constant_strategies.c...
[CC] Compiling src/bitwise_flag_manipulation_strategies.c...
[CC] Compiling src/bound_strategies.c...
[CC] Compiling src/bswap_endianness_transformation_strategies.c...
[CC] Compiling src/bt_strategies.c...
[CC] Compiling src/byte_construct_strategy.c...
[CC] Compiling src/call_pop_immediate_strategies.c...
[CC] Compiling src/call_pop_pic_delta_obfuscation.c...
[CC] Compiling src/cli.c...
[CC] Compiling src/cltd_zero_extension_strategies.c...
[CC] Compiling src/cmov_conditional_elimination_strategies.c...
[CC] Compiling src/cmp_memory_disp_strategies.c...
[CC] Compiling src/cmp_strategies.c...
[CC] Compiling src/conditional_flag_strategies.c...
[CC] Compiling src/conditional_jump_displacement_strategies.c...
[CC] Compiling src/conditional_jump_offset_strategies.c...
[CC] Compiling src/conservative_strategies.c...
[CC] Compiling src/context_aware_strategies.c...
[CC] Compiling src/context_preservation_strategies.c...
[CC] Compiling src/control_flow_dispatcher_obfuscation.c...
[CC] Compiling src/core.c...
[CC] Compiling src/custom_hash_strategies.c...
[CC] Compiling src/enhanced_arithmetic_strategies.c...
[CC] Compiling src/enhanced_immediate_strategies.c...
[CC] Compiling src/enhanced_mov_mem_strategies.c...
[CC] Compiling src/enhanced_register_chaining_strategies.c...
[CC] Compiling src/enter_leave_alternative_encoding_strategies.c...
[CC] Compiling src/evaluation_framework.c...
[CC] Compiling src/fpu_stack_immediate_encoding_strategies.c...
[CC] Compiling src/fpu_stack_obfuscation.c...
[CC] Compiling src/fpu_strategies.c...
[CC] Compiling src/general_strategies.c...
[CC] Compiling src/getpc_strategies.c...
[CC] Compiling src/hash_utils.c...
[CC] Compiling src/immediate_split_strategies.c...
[CC] Compiling src/improved_arithmetic_strategies.c...
[CC] Compiling src/improved_mov_strategies.c...
[CC] Compiling src/imul_strategies.c...
[CC] Compiling src/inc_dec_chain_strategies.c...
[CC] Compiling src/incremental_byte_register_syscall.c...
[CC] Compiling src/incremental_decoder_obfuscation.c...
[CC] Compiling src/indirect_call_strategies.c...
[CC] Compiling src/jcxz_null_safe_loop_termination.c...
[CC] Compiling src/jecxz_jrcxz_transformation_strategies.c...
[CC] Compiling src/jump_strategies.c...
[CC] Compiling src/lahf_sahf_flag_preservation_strategies.c...
[CC] Compiling src/large_immediate_strategies.c...
[CC] Compiling src/lea_arithmetic_calculation_strategies.c...
[CC] Compiling src/lea_arithmetic_substitution_strategies.c...
[CC] Compiling src/lea_complex_addressing_strategies.c...
[CC] Compiling src/lea_displacement_optimization_strategies.c...
[CC] Compiling src/lea_displacement_strategies.c...
[CC] Compiling src/lea_strategies.c...
[CC] Compiling src/linux_socketcall_strategies.c...
[CC] Compiling src/linux_string_push_strategies.c...
[CC] Compiling src/loop_comprehensive_strategies.c...
[CC] Compiling src/loop_strategies.c...
[CC] Compiling src/loopnz_compact_search_obfuscation.c...
[CC] Compiling src/main.c...
[CC] Compiling src/memory_displacement_strategies.c...
[CC] Compiling src/memory_strategies.c...
[CC] Compiling src/mixed_arithmetic_base_obfuscation.c...
[CC] Compiling src/ml_instruction_map.c...
[CC] Compiling src/ml_metrics.c...
[CC] Compiling src/ml_strategist.c...
[CC] Compiling src/ml_strategy_registry.c...
[CC] Compiling src/modrm_sib_badbyte_strategies.c...
src/modrm_sib_badbyte_strategies.c:8:12: error: conflicting types for ‘get_reg_index’; have ‘int(x86_reg)’
    8 | static int get_reg_index(x86_reg reg) {
      |            ^~~~~~~~~~~~~
In file included from src/strategy.h:20,
                 from src/modrm_sib_badbyte_strategies.c:1:
src/core.h:69:9: note: previous declaration of ‘get_reg_index’ with type ‘uint8_t(uint8_t)’ {aka ‘unsigned char(unsigned char)’}
   69 | uint8_t get_reg_index(uint8_t reg);
      |         ^~~~~~~~~~~~~
make: *** [Makefile:176: bin/modrm_sib_badbyte_strategies.o] Error 1
